# teleport

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  manager.py
backend/app/routers/: health.py  signaling.py
backend/tests/: conftest.py  test_health.py  test_signaling_protocol.py
deploy/: .env.example  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.yml
frontend/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CallBar.tsx  CodeDisplay.tsx  CodeInput.tsx  DropZone.tsx  FileTransferManager.tsx  MediaStage.tsx  Portal.tsx  QRDisplay.tsx  QRScanner.tsx  Toast.tsx  TransferProgress.tsx
frontend/src/hooks/: useClipboard.ts  useFileTransfer.ts  useMediaStreams.ts  useWebRTC.ts
frontend/src/lib/: teleport-constants.ts  webrtc.ts  words.ts
frontend/src/lib/signaling/: index.ts  types.ts  ws-client.ts
